# algolabra_k25

./: .coverage  README.md  network.py  pyproject.toml  testausraportti.txt
src/: constants.py  main.py  mnist_loader.py  network.py  network_trainer.py  neural_network.py
src/tests/: loader_test.py  network_test.py  trainer_test.py
