[project]
name = "algolabra-k25"
version = "0.1.0"
description = ""
authors = [
    {name = "Antti Moisio",email = "moisioa1@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "numpy (>=1.26.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

